Login Functionality and Social Login (Google and Github)

--- a/.env
+++ b/.env
@@ -5,10 +5,10 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://jaimin:jaimin@cluster0.jmrnzxu.mongodb.net/test"
-NEXTAUTH_SECRET=
+NEXTAUTH_SECRET=rrztCQALtguhDIvE4hLJk3noILhsUGEquuCWsxGWuF4=
 
-GITHUB_ID=
-GITHUB_SECRET=
+GITHUB_ID=468b1b98fd785cc84822
+GITHUB_SECRET=6150ae0267d7f1ac1760b1eaa9390d11fcace26b
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=833931830253-9i0l1d04bh6o8a8himkjk91o1h8q7rj1.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
