Messages creation, Message Image upload

--- a/.env
+++ b/.env
@@ -12,3 +12,5 @@ GITHUB_SECRET=6150ae0267d7f1ac1760b1eaa9390d11fcace26b
 
 GOOGLE_CLIENT_ID=833931830253-9i0l1d04bh6o8a8himkjk91o1h8q7rj1.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dr4dkayry
