--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^3.6.0",
     "next": "14.0.1",
     "next-auth": "^4.24.5",
+    "next-cloudinary": "^6.5.1",
     "next-superjson-plugin": "^0.6.3",
     "react": "^18",
     "react-dom": "^18",
