--- a/.env
+++ b/.env
@@ -4,18 +4,18 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL=mongodb+srv://jaimin:jaimin@cluster0.jmrnzxu.mongodb.net/test
-NEXTAUTH_SECRET=rrztCQALtguhDIvE4hLJk3noILhsUGEquuCWsxGWuF4=
+DATABASE_URL=
+NEXTAUTH_SECRET=
 
-GITHUB_ID=468b1b98fd785cc84822
-GITHUB_SECRET=6150ae0267d7f1ac1760b1eaa9390d11fcace26b
+GITHUB_ID=
+GITHUB_SECRET=
 
-GOOGLE_CLIENT_ID=833931830253-9i0l1d04bh6o8a8himkjk91o1h8q7rj1.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 
-NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dr4dkayry
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
 
-NEXT_PUBLIC_PUSHER_APP_KEY = 910528566c0d099b18e1
-PUSHER_APP_ID = 1806998
-PUSHER_SECRET = 1f307e5a12f6f94638e0
-NEXT_PUBLIC_PUSHER_CLUSTER=ap2
+NEXT_PUBLIC_PUSHER_APP_KEY=
+PUSHER_APP_ID=
+PUSHER_SECRET=
+NEXT_PUBLIC_PUSHER_CLUSTER=
