--- a/.env
+++ b/.env
@@ -9,6 +9,7 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
+NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET=
 
 NEXT_PUBLIC_PUSHER_APP_KEY=
 PUSHER_APP_ID=
